<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:layout_width="match_parent"
                                            android:layout_height="5000dp"
                                            android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="140dp">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            android:text="@string/charger_status_start"
            android:textColor="#EDF0F7"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.sevenchip.charger.widget.SwitchButton
            android:id="@+id/sb_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_status"
            android:visibility="gone"
            app:sb_checked_color="#a00066ff"/>

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/selector_blue_btn"
            android:text="@string/action_settings"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spv_maximum_capacity"/>

        <RadioGroup
            android:id="@+id/rg_battery_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_battery_type">

            <RadioButton
                android:id="@+id/rb_LiPo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/Li_Po"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_LiHv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/Li_Hv"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_FULLY_MAX"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/FULLY_MAX"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_GENS_ACE"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/GENS_ACE"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_charging_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_charging_mode">

            <RadioButton
                android:id="@+id/rb_upkeep"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/upkeep"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_charging"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/charging"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_discharge"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/discharge"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/rb_balance"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_settings_button"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/balance"
                android:textColor="@color/text_setting_button"
                android:textSize="14sp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_label_charging_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            android:text="@string/charger_mode"
            android:textColor="#EDF0F7"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_battery_type"/>

        <TextView
            android:id="@+id/tv_label_battery_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"
            android:text="@string/battery_type"
            android:textColor="#EDF0F7"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

        <com.sevenchip.charger.widget.SettingPropertyView
            android:id="@+id/spv_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            app:hint="@string/hint_current_setting"
            app:hintHighlight="@string/hint_hl_current_setting"
            app:isDecimal="true"
            app:label="@string/current_setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_charging_mode"
            app:progress="80"
            app:propertyValue="0.4A"
            app:symbol="A"/>

        <com.sevenchip.charger.widget.SettingPropertyView
            android:id="@+id/spv_temperature_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            app:hint="@string/hint_battery_temperature"
            app:hintHighlight="@string/hint_hl_battery_temperature"
            app:label="@string/battery_temperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spv_current"
            app:progress="20"
            app:propertyValue="40℃"
            app:symbol="℃"/>

        <com.sevenchip.charger.widget.SettingPropertyView
            android:id="@+id/spv_maximum_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            app:hint="@string/hint_charger_time"
            app:hintHighlight="@string/hint_hl_charger_time"
            app:label="@string/charger_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spv_temperature_alarm"
            app:progress="40"
            app:propertyValue="80Min"
            app:symbol="Min"/>

        <com.sevenchip.charger.widget.SettingPropertyView
            android:id="@+id/spv_maximum_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            app:hint="@string/hint_charger_capacity"
            app:hintHighlight="@string/hint_hl_charger_capacity"
            app:label="@string/charger_capacity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spv_maximum_time"
            app:progress="100"
            app:propertyValue="100000mAh"
            app:symbol="mAh"/>

        <!--<com.sevenchip.charger.widget.SettingPropertyView-->
        <!--android:id="@+id/spv_battery_cells"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="26dp"-->
        <!--android:layout_marginTop="28dp"-->
        <!--android:layout_marginEnd="26dp"-->
        <!--app:hint="@string/hint_battery_cells"-->
        <!--app:hintHighlight="@string/hint_hl_battery_cells"-->
        <!--app:label="@string/battery_cells"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/spv_maximum_capacity"-->
        <!--app:progress="70"-->
        <!--app:propertyValue="7S"-->
        <!--/>-->

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>