<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <com.sevenchip.charger.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        app:centerMode="title"
        app:centerTitle="@string/title_wifi_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDrawable="@mipmap/ic_arrow_back"
        app:titleColor="@color/white"/>

    <ImageView
        android:id="@+id/iv_hotspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_hotspot_ip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"

        />

    <TextView
        android:id="@+id/tv_hotspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_hotspot"
        app:layout_constraintLeft_toRightOf="@+id/iv_hotspot"
        app:layout_constraintTop_toTopOf="@+id/iv_hotspot"
        />

    <ImageView
        android:id="@+id/iv_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_wifi_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hotspot"/>

    <EditText
        android:id="@+id/et_ssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btn_normal"
        android:gravity="center"
        android:hint="@string/settings_wifi_account"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/alpha_60_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_wifi"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/iv_wifi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_wifi"/>

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_ssid"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btn_normal"
        android:gravity="center"
        android:hint="@string/settings_wifi_password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/alpha_60_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_password"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/iv_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_password"/>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_blue_btn"
        android:padding="10dp"
        android:text="@string/action_settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"/>
</android.support.constraint.ConstraintLayout>